# chromeOS-crostini-MPRIS

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  model.rs  mpris_bridge.rs  state.rs
docs/: crostini-mpris-bridge.service
extension/: package.json
extension/public/: manifest.json  offscreen.html  panel.html  popup.css  popup.html
extension/scripts/: build.ts
extension/src/: background.ts  offscreen.ts  panel.ts  popup.ts
references/: Arch Linux 媒体信息同步方案.md  Chromebook 蓝牙耳机媒体控制 (Rust + Media Hub 版).md  媒体控件状态同步优化.md
